[gd_scene load_steps=5 format=3 uid="uid://dri7u0vehnpgg"]

[ext_resource type="Script" uid="uid://bbjtcy7bnwpw1" path="res://Components/ZoneComponentView.gd" id="1_xsqs1"]
[ext_resource type="Resource" uid="uid://dpa6faprq3h8l" path="res://Resources/ZoneComponents/7-Gather_Big-Wood-Fiber.tres" id="2_jluim"]
[ext_resource type="Texture2D" uid="uid://bm3sbbinm7g7x" path="res://Assets/Icons/wood.png" id="3_0q2r3"]
[ext_resource type="Texture2D" uid="uid://b447vwne1h6dp" path="res://Assets/Icons/fiber.png" id="3_x5i3r"]

[node name="ZoneComponentView" type="Control"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 3
anchors_preset = 0
offset_right = 64.0
offset_bottom = 64.0
script = ExtResource("1_xsqs1")
component = ExtResource("2_jluim")

[node name="PrimaryTexture" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -17.0
offset_right = 24.0
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_0q2r3")
stretch_mode = 3

[node name="SecondaryTexture" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -48.0
offset_top = -34.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.75, 0.75)
pivot_offset = Vector2(24, 17)
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_x5i3r")
stretch_mode = 3

[node name="IsBigLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -10.0
offset_bottom = 23.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0.988235, 0.65098, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 32
text = "+ "
horizontal_alignment = 1

[node name="TierLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
offset_right = 26.0
offset_bottom = 45.0
theme_override_colors/font_color = Color(0.988235, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 20
text = " T7"
horizontal_alignment = 1
